<resources>
    <string name="app_name">Smart Glasses</string>
    <string name="default_notification_channel_id" translatable="false">Notification_Channel_01</string>
    <string name="default_notification_channel_name" translatable="false">Smart Glass</string>
    <string name="title_home">Home</string>
    <string name="title_group">Groups</string>
    <string name="title_notifications">NOTIFICATION</string>
    <string name="title_notification_details">NOTIFICATION DETAILS</string>
    <string name="title_account">MANAGE ACCOUNT</string>
    <string name="title_glasses">Glasses</string>
    <string name="title_member_details">MEMBER DETAILS</string>
    <string name="title_invite_member">Invite Member</string>
    <string name="title_join_group">SEARCH GROUP</string>
    <string name="title_register">SIGN UP</string>
    <string name="title_glass_view">GLASS NAME</string>
    <string name="title_confirm">CONFIRM</string>
    <string name="title_addglass">Link Glasses</string>
    <string name="title_glass_details">Glasses Details</string>
    <string name="title_profile">EDIT PROFILE</string>
    <string name="title_group_details">Group Details</string>
    <string name="title_signin">SIGN IN</string>
    <string name="title_change_role">Change Role</string>
    <string name="title_create_group">Create Group</string>
    <string name="title_update_profile">Update Profile</string>
    <string name="title_update_group">Update Group Name</string>

    <!--Notification-->
    <string name="notify_glasses_name">Glasses [%s]</string>
    <string name="notify_sos_title">SOS Notification!</string>
    <string name="notify_sos_message">Have an SOS notification from glasses [%s].</string>
    <string name="notify_group_title">Group [%s] notification!</string>
    <string name="notify_group_default_message">New notification from group [%s].</string>
    <string name="notify_group_add_glasses_message">A glasses has been added to group [%s].</string>
    <string name="notify_group_update_glasses_message">Glasses [%s] has been updated information.</string>
    <string name="notify_group_invitation_message">You received an invitation to join group [%s].</string>
    <string name="notify_group_remove_glasses_message">A glasses has been removed out of group [%s].</string>
    <string name="notify_group_update_message">Group [%s] has been updated information.</string>
    <string name="notify_group_join_message">A member has joined into group [%s].</string>
    <string name="notify_group_quit_message">A member of group [%s] has left.</string>
    <string name="notify_group_change_role_message">A member of group [%s] has been changed the role.</string>
    <string name="notify_group_remove_member_message">A member has been removed out of group [%s].</string>

    <!--Button String-->
    <string name="btn_invite_member">Invite</string>
    <string name="btn_add_glass">Link</string>
    <string name="btn_view_glass">View Glass</string>
    <string name="btn_remove_group">Remove Group</string>
    <string name="btn_remove_glasses">Remove Glasses</string>
    <string name="btn_join_group">Join Group</string>
    <string name="btn_leave_group">Leave Group</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_create_group">Create Group</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="btn_save_profile">Save</string>
    <string name="btn_create">Create</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_save">Save</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_my_group">My group</string>
    <string name="btn_request_join_group">Invitation</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_reject">Reject</string>
    <string name="btn_update">Update</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_add_member">Add Member</string>

    <!--Text-->
    <string name="tv_role">Role</string>
    <string name="tv_role_admin">Admin</string>
    <string name="tv_role_member">Member</string>
    <string name="tv_role_inviting">Inviting</string>
    <string name="tv_group_information">Group manage</string>
    <string name="tv_blind_information">Blind Information</string>
    <string name="tv_user_name">Name</string>
    <string name="tv_user_phone">Phone</string>
    <string name="tv_sign_up_question">Already have an account?</string>
    <string name="tv_sign_up">Sign up</string>
    <string name="tv_signin_question">Do not have an account ?</string>
    <string name="tv_member">Member</string>
    <string name="tv_edit_profile">Edit Profile</string>
    <string name="tv_remove_account">Remove Account</string>
    <string name="tv_language">Language</string>
    <string name="tv_signout">Sign Out</string>
    <string name="tv_en">English</string>
    <string name="tv_vi">Tiếng Việt</string>
    <string name="tv_admin_invitation">Admin: %s</string>

    <!--Glass-->
    <string name="tv_glass_name">Glasses name</string>
    <string name="tv_glass_id">Glasses ID</string>
    <string name="tv_glass_id_">Glasses ID #%s</string>
    <string name="tv_blind_name">Glasses Owner</string>
    <string name="tv_blind_address">Address</string>
    <string name="tv_blind_phone">Phone</string>
    <string name="tv_notification">Notification is empty!</string>
    <string name="tv_group">Group:</string>
    <string name="tv_blind_info">Glasses Owner Info:</string>
    <string name="tv_empty_group">You\'ve not joined any groups yet. Please select <b>JOIN GROUP</b> or <b>CREATE GROUP</b> for your own.</string>
    <string name="tv_empty_request_to_join">Have no join group requests founded</string>
    <string name="tv_empty_glasses">Have no glasses founded!</string>
    <string name="tv_camera">Take A Photo</string>
    <string name="tv_gallery">Gallery</string>
    <string name="tv_hi">Hi, </string>
    <string name="tv_today">Today,</string>
    <string name="tv_glasses">Glasses</string>

    <!--Hint-->
    <string name="hint_search_member">Search Member Here…</string>
    <string name="hint_username">Username</string>
    <string name="hint_full_name">Fullname</string>
    <string name="hint_password">Password</string>
    <string name="hint_group_name">Enter Group Name</string>
    <string name="hint_re_pass">Confirm Password</string>
    <string name="hint_glass_id_verify">Enter The Verification Code</string>
    <string name="hint_glass_name">Glasses Name</string>
    <string name="hint_glass_id">Glasses ID</string>
    <string name="hint_blind_name">Glasses Owner</string>
    <string name="hint_blind_address">Address</string>


    <string name="hint_blind_age">Year of Birth</string>
    <string name="hint_invite_user">Enter username</string>

    <!--Welcome-->
    <string name="wel_01">Allows you to track the location of glasses owners</string>
    <string name="wel_02">Allows you to receive SOS Notifications when glasses owners are in the balance </string>
    <string name="wel_03">Welcome to our application!  </string>

    <string name="title_wel_01">LOCATION TRACKING</string>
    <string name="title_wel_02">SOS SIGNAL</string>
    <string name="title_wel_03">WELCOME!</string>


    <!--Message-->
    <string name="msg_logout">Are you sure you want to logout?</string>
    <string name="msg_login_failed">Your username or password is invalid. Please try again!</string>
    <string name="msg_password_invalid_lenght">Password should be more than 8 characters.</string>
    <string name="msg_password_invalid">Password should strbe have as least a digit, 1 letters and 1 special characters.</string>
    <string name="msg_password_invalid_space">Password has no spaces</string>
    <string name="msg_register_name_failed">User name is invalid</string>
    <string name="msg_confirm_pass">Incorrect password</string>
    <string name="msg_phone">Phone number is at least 10 digits</string>
    <string name="msg_verify_code">The verification code is invalid</string>
    <string name="msg_signup_failed">The username already exists, please try again! </string>
    <string name="msg_invitation_success">Your invitation has been sent successfully!</string>
    <string name="msg_remove_member">Are you sure you want to remove this member?</string>
    <string name="msg_leave_group">Are you sure you want to leave this group?</string>
    <string name="msg_remove_group">Are you sure you want to remove this group?</string>
    <string name="msg_delete_glass">Are you sure you want to delete this glasses?</string>
    <string name="msg_error">Your request has been failed. Please try again.</string>

    <string name="time_just_now">Just now</string>
    <string name="time_one_minute_ago">1m ago</string>
    <string name="time_minutes_ago">%sm ago</string>
    <string name="time_one_hour_ago">1h ago</string>
    <string name="time_hours_ago">%sh ago</string>
    <string name="time_yesterday">Yesterday</string>
    <string name="time_days_ago">%sd ago</string>
    <string name="time_months_ago">%s months ago</string>
    <string name="time_hour_short">h</string>
    <string name="time_minute_short">m</string>

</resources>
