<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/tv_group_character"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="14dp"
            android:src="@drawable/ic_3d_glasses" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_dialog"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_addglass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/title_addglass"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_glass_id"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/edt_gradient"
            android:gravity="center"
            android:hint="@string/hint_glass_id"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_addglass" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_glass_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edt_gradient"
            android:gravity="center"
            android:hint="@string/hint_glass_name"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@+id/edt_glass_id" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_blind_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edt_gradient"
            android:gravity="center"
            android:hint="@string/hint_blind_name"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@+id/edt_glass_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_blind_address"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edt_gradient"
            android:gravity="center"
            android:hint="@string/hint_blind_address"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@+id/edt_blind_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_blind_age"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edt_gradient"
            android:gravity="center"
            android:hint="@string/hint_blind_age"
            android:inputType="date"
            android:maxLength="4"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@+id/edt_blind_address" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create_glasses"
            android:layout_marginTop="32dp"
            android:layout_width="150dp"
            app:layout_constraintTop_toBottomOf="@+id/edt_blind_age"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/btn_blue"
            android:text="@string/btn_create"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>