<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:background="@color/colorAccent"
        android:layout_height="?actionBarSize"
        android:gravity="center"
        android:text="@string/title_profile"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textAllCaps="true"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="20dp"

        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/tv_user_name"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toStartOf="@+id/edt_name"
            android:textSize="16dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_name"
            android:layout_width="200dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="56dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_phone"
            android:layout_width="200dp"
            android:layout_height="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="56dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/tv_user_phone"
            android:textSize="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/edt_phone"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            >

        </androidx.appcompat.widget.AppCompatTextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_profile"
        android:textSize="16dp"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_blue"
        />






</LinearLayout>