<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/layout_group_action"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_empty"
        android:gravity="center"
        android:padding="48dp"
        android:background="@color/white"
        android:textSize="15sp"
        android:text="@string/tv_empty_group"
        android:textColor="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layout_group_action"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        app:layout_constraintBottom_toTopOf="@+id/layout_group_action"
        android:background="@color/grey"/>
    <LinearLayout
        android:id="@+id/layout_group_action"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_join_group"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/btn_join_group"
            android:textColor="@color/grey_light"
            android:gravity="center"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_group_info" />

        <View
            android:layout_width="1px"
            android:background="@color/grey"
            android:layout_height="match_parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_group"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/btn_create_group"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_group_info" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>