<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="80dp"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/white"
        android:layout_height="80dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="60dp"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="30dp"
        android:layout_marginTop="10dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/colorAccent"
        android:layout_height="60dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/tv_group_character"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="14dp"
            android:src="@drawable/ic_3d_glasses"/>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_marginTop="40dp"
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_invite_member"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_user_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/edt_gradient"
            android:gravity="center"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/hint_invite_user"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:layout_marginTop="24dp"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_invite_member"
            android:layout_marginTop="32dp"
            android:layout_width="150dp"
            app:layout_constraintTop_toBottomOf="@+id/edt_user_name"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/btn_blue"
            android:text="@string/btn_invite_member"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>